# crispr-data-engineering

./: .gitignore  01_crispr_eda_quality.ipynb  README.md  assets.py  definitions.py  env.example  gene_search.py  main.py  pyproject.toml  start_jupyter.sh  transform.py
.ipynb_checkpoints/: 01_crispr_eda_quality-checkpoint.ipynb
.tmp_dagster_home_t10ilwfd/storage/9871ec0f-b77c-4a9e-ab86-0e01f642cc09/compute_logs/: ihgfdvze.err  ihgfdvze.out
.tmp_dagster_home_t10ilwfd/storage/bf821c5f-44fc-462e-8dd1-98dc681c5f32/compute_logs/: xqtorpth.err  xqtorpth.out
.tmp_dagster_home_z8antv50/storage/0c20524b-fecc-4750-ae6e-20a25fa7ce40/compute_logs/: jhcrdagj.err  jhcrdagj.out
.tmp_dagster_home_z8antv50/storage/5bb97bd1-bc17-4fbb-8b5b-78d49a046fb6/compute_logs/: wloitjoa.err  wloitjoa.out
.tmp_dagster_home_z8antv50/storage/5c723118-e327-4a1f-8935-a6b3057319a4/compute_logs/: mvmrsaqg.err  mvmrsaqg.out
.tmp_dagster_home_z8antv50/storage/8d069c32-ea59-4aa8-a47d-cf53307f20af/compute_logs/: jgggphyd.err  jgggphyd.out
archived/: transform.py
data/delta/gene_effects/: .part-00000-37ec01ea-8591-45f3-8cf9-516a15af1efa-c000.snappy.parquet.crc  .part-00000-accd8f19-e194-405f-8749-278e3624afa0-c000.snappy.parquet.crc  .part-00001-8f29e3e8-f3bb-4cf1-b113-572011dbf361-c000.snappy.parquet.crc  .part-00001-a570be8a-ce51-4dc1-b95e-91d296311176-c000.snappy.parquet.crc  .part-00002-04d6ebad-c191-4398-9b32-647445bce896-c000.snappy.parquet.crc  .part-00002-930edcd8-2b22-4bb2-aca7-6518acd40784-c000.snappy.parquet.crc  .part-00003-3237dda0-2467-4240-af84-0cf5c76b6c14-c000.snappy.parquet.crc  .part-00003-3f140997-174d-45d5-b09e-2622c7debcc0-c000.snappy.parquet.crc
(+6 files in other folders)
